--- a/src/jp/ascendia/application/fbooks/SearchResPage.fxml
+++ b/src/jp/ascendia/application/fbooks/SearchResPage.fxml
@@ -27,6 +27,22 @@
                   <Label fx:id="FixReadStartlabel" layoutX="109.0" layoutY="136.0" prefHeight="15.0" prefWidth="134.0" />
                   <Label fx:id="FixReadEndlabel" layoutX="370.0" layoutY="136.0" prefHeight="15.0" prefWidth="134.0" />
                   <Label fx:id="FixMemolabel" layoutX="109.0" layoutY="153.0" prefHeight="52.0" prefWidth="330.0" />
+                  <Label fx:id="FixMemolabel1" layoutX="109.0" layoutY="350.0" prefHeight="52.0" prefWidth="330.0" />
+                  <Label fx:id="FixReadEndlabel1" layoutX="370.0" layoutY="333.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="FixReadStartlabel1" layoutX="109.0" layoutY="333.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="FixPubDaylabel1" layoutX="109.0" layoutY="316.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="FixCompanylabel1" layoutX="109.0" layoutY="299.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="FixAuthorlabel1" layoutX="109.0" layoutY="282.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="FixTitlelabel1" layoutX="109.0" layoutY="265.0" prefHeight="15.0" prefWidth="134.0" />
+                  <Label fx:id="Memolabel1" layoutX="43.0" layoutY="346.0" prefHeight="22.0" prefWidth="38.0" />
+                  <Label fx:id="ReadEndlabel1" layoutX="304.0" layoutY="329.0" prefHeight="22.0" prefWidth="66.0" />
+                  <Label fx:id="ReadStartlabel1" layoutX="43.0" layoutY="329.0" prefHeight="22.0" prefWidth="66.0" />
+                  <Label fx:id="PubDaylabel1" layoutX="43.0" layoutY="312.0" prefHeight="22.0" prefWidth="38.0" />
+                  <Label fx:id="Companylabel1" layoutX="43.0" layoutY="295.0" prefHeight="22.0" prefWidth="38.0" />
+                  <Label fx:id="Authorlabel1" layoutX="43.0" layoutY="278.0" prefHeight="22.0" prefWidth="38.0" />
+                  <Label fx:id="Titlelabel1" layoutX="43.0" layoutY="261.0" prefHeight="22.0" prefWidth="38.0" />
+                  <Button layoutX="504.0" layoutY="366.0" mnemonicParsing="false" onAction="#handleButtonActionDel" text="削除" />
+                  <Button layoutX="445.0" layoutY="366.0" mnemonicParsing="false" onAction="#handleButtonActionEditPage" text="編集" />
                </children>
             </AnchorPane>
          </content>
