--- a/src/jp/ascendia/application/fbooks/EditPage.fxml
+++ b/src/jp/ascendia/application/fbooks/EditPage.fxml
@@ -5,29 +5,29 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="43.0" layoutY="20.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍編集" />
-      <Pane layoutX="22.0" layoutY="52.0" prefHeight="290.0" prefWidth="550.0">
+      <Label layoutX="40.0" layoutY="40.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍編集" />
+      <Pane layoutX="57.0" layoutY="87.0" prefHeight="324.0" prefWidth="550.0">
          <children>
-            <Label layoutX="23.0" layoutY="34.0" prefHeight="22.0" prefWidth="113.0" text="タイトル" />
-            <Label layoutX="23.0" layoutY="70.0" prefHeight="22.0" prefWidth="113.0" text="著者" />
-            <Label layoutX="23.0" layoutY="150.0" prefHeight="22.0" prefWidth="113.0" text="出版日" />
-            <Label layoutX="23.0" layoutY="110.0" prefHeight="22.0" prefWidth="113.0" text="出版社" />
-            <Label layoutX="23.0" layoutY="195.0" prefHeight="22.0" prefWidth="113.0" text="読書開始日" />
-            <Label layoutX="23.0" layoutY="232.0" prefHeight="22.0" prefWidth="38.0" text="メモ" />
-            <Label layoutX="284.0" layoutY="195.0" prefHeight="22.0" prefWidth="66.0" text="読書終了日" />
-            <TextField fx:id="TitleField" layoutX="105.0" layoutY="34.0" prefHeight="23.0" prefWidth="395.0" />
-            <TextField fx:id="AuthorField" layoutX="105.0" layoutY="70.0" prefHeight="23.0" prefWidth="395.0" />
-            <TextField fx:id="CompanyField" layoutX="105.0" layoutY="110.0" prefHeight="23.0" prefWidth="395.0" />
-            <TextField fx:id="PubDayField" layoutX="105.0" layoutY="150.0" prefHeight="23.0" prefWidth="395.0" />
-            <TextField fx:id="ReadStartField" layoutX="105.0" layoutY="195.0" prefHeight="23.0" prefWidth="138.0" />
-            <TextField fx:id="ReadEndField" layoutX="362.0" layoutY="195.0" prefHeight="23.0" prefWidth="138.0" />
-            <TextArea fx:id="MemoField" layoutX="105.0" layoutY="232.0" prefHeight="61.0" prefWidth="395.0" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="35.0" prefHeight="22.0" prefWidth="57.0" text="タイトル：" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="71.0" prefHeight="22.0" prefWidth="57.0" text="著者：" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="151.0" prefHeight="22.0" prefWidth="57.0" text="出版日：" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="111.0" prefHeight="22.0" prefWidth="57.0" text="出版社：" />
+            <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="196.0" prefHeight="22.0" prefWidth="75.0" text="読書開始日：" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="232.0" prefHeight="22.0" prefWidth="57.0" text="メモ：" />
+            <Label layoutX="284.0" layoutY="195.0" prefHeight="22.0" prefWidth="66.0" text="読書終了日：" />
+            <TextField fx:id="TitleField" layoutX="105.0" layoutY="34.0" prefHeight="23.0" prefWidth="414.0" />
+            <TextField fx:id="AuthorField" layoutX="105.0" layoutY="70.0" prefHeight="23.0" prefWidth="414.0" />
+            <TextField fx:id="CompanyField" layoutX="105.0" layoutY="110.0" prefHeight="23.0" prefWidth="414.0" />
+            <TextArea fx:id="MemoField" layoutX="105.0" layoutY="232.0" prefHeight="61.0" prefWidth="414.0" />
+            <DatePicker fx:id="ReadStartField" layoutX="105.0" layoutY="195.0" />
+            <DatePicker fx:id="ReadEndField" layoutX="356.0" layoutY="195.0" />
+            <DatePicker fx:id="PubDayField" layoutX="105.0" layoutY="150.0" />
          </children>
       </Pane>
-      <Button layoutX="247.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleButtonActionEdit" text="更新" />
-      <Button layoutX="306.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleButtonAction" text="戻る" />
+      <Button layoutX="310.0" layoutY="411.0" mnemonicParsing="false" onAction="#handleButtonActionEdit" text="更新" />
+      <Button layoutX="370.0" layoutY="411.0" mnemonicParsing="false" onAction="#handleButtonAction" text="戻る" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
