--- a/src/jp/ascendia/application/fbooks/SearchPage.fxml
+++ b/src/jp/ascendia/application/fbooks/SearchPage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.paint.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -10,18 +12,36 @@
       <Label layoutX="40.0" layoutY="40.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍検索" />
       <Pane layoutX="61.0" layoutY="107.0" prefHeight="157.0" prefWidth="550.0">
          <children>
-            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="71.0" prefHeight="22.0" prefWidth="57.0" text="著者：" />
-            <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="113.0" prefHeight="22.0" prefWidth="75.0" text="読書開始日：" />
-            <Label layoutX="284.0" layoutY="113.0" prefHeight="22.0" prefWidth="66.0" text="読書終了日：" />
-            <TextField fx:id="TitleField" layoutX="105.0" layoutY="34.0" prefHeight="23.0" prefWidth="417.0" />
-            <TextField fx:id="AuthorField" layoutX="105.0" layoutY="74.0" prefHeight="23.0" prefWidth="417.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="35.0" prefHeight="22.0" prefWidth="57.0" text="タイトル：" />
-            <DatePicker fx:id="ReadStartField" layoutX="105.0" layoutY="113.0" />
-            <DatePicker fx:id="ReadEndField" layoutX="358.0" layoutY="113.0" />
+            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="37.0" prefHeight="22.0" prefWidth="83.0" text="タイトル：">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="87.0" prefHeight="22.0" prefWidth="83.0" text="著者：">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label alignment="CENTER_RIGHT" layoutX="12.0" layoutY="132.0" prefHeight="22.0" prefWidth="100.0" text="読書開始日：">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="304.0" layoutY="132.0" prefHeight="22.0" prefWidth="100.0" text="読書終了日：">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextField fx:id="TitleField" layoutX="125.0" layoutY="34.0" prefHeight="30.0" prefWidth="450.0">
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
+            <TextField fx:id="AuthorField" layoutX="125.0" layoutY="84.0" prefHeight="30.0" prefWidth="450.0">
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
+            <DatePicker fx:id="ReadStartField" layoutX="125.0" layoutY="133.0" />
+            <DatePicker fx:id="ReadEndField" layoutX="413.0" layoutY="133.0" />
          </children>
       </Pane>
-      <Button layoutX="320.0" layoutY="275.0" mnemonicParsing="false" onAction="#handleButtonActionSearRes" text="検索" />
-      <Button layoutX="380.0" layoutY="275.0" mnemonicParsing="false" onAction="#handleButtonAction" text="戻る" />
+      <Button layoutX="320.0" layoutY="295.0" mnemonicParsing="false" onAction="#handleButtonActionSearRes" text="検索" />
+      <Button layoutX="380.0" layoutY="295.0" mnemonicParsing="false" onAction="#handleButtonAction" text="戻る" />
    </children>
    <stylesheets>
      <URL value="@../css/main.css" />
