--- a/src/jp/ascendia/application/fbooks/MainPage.fxml
+++ b/src/jp/ascendia/application/fbooks/MainPage.fxml
@@ -9,28 +9,28 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="40.0" layoutY="40.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍管理" />
-      <Button layoutX="150.0" layoutY="126.0" mnemonicParsing="false" onAction="#handleButtonActionAddPage" prefHeight="50.0" prefWidth="138.0" text="新規登録">
+      <Label layoutX="40.0" layoutY="50.0" prefHeight="42.0" prefWidth="250.0" styleClass="title" text="読書記録アプリ" />
+      <Button layoutX="150.0" layoutY="146.0" mnemonicParsing="false" onAction="#handleButtonActionAddPage" prefHeight="50.0" prefWidth="138.0" text="登録">
          <font>
              <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="150.0" layoutY="210.0" mnemonicParsing="false" onAction="#handleButtonActionSearPage" prefHeight="50.0" prefWidth="138.0" text="検索">
+      <Button layoutX="150.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleButtonActionSearPage" prefHeight="50.0" prefWidth="138.0" text="検索">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="150.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleButtonActionClose" prefHeight="50.0" prefWidth="138.0" text="閉じる">
+      <Button layoutX="150.0" layoutY="334.0" mnemonicParsing="false" onAction="#handleButtonActionClose" prefHeight="50.0" prefWidth="138.0" text="閉じる">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <ImageView layoutX="50.0" layoutY="110.0" fitHeight="81.0" fitWidth="81.0" preserveRatio="true">
+      <ImageView layoutX="50.0" layoutY="130.0" fitHeight="81.0" fitWidth="81.0" preserveRatio="true">
          <image>
             <Image preserveRatio="false" smooth="false" url="@../../../../../img/fukurou.png" />
          </image>
       </ImageView>
-      <ImageView layoutX="50.0" layoutY="195.0" fitHeight="79.0" fitWidth="102.0" preserveRatio="true">
+      <ImageView layoutX="50.0" layoutY="225.0" fitHeight="79.0" fitWidth="102.0" preserveRatio="true">
          <image>
            <Image preserveRatio="false" smooth="false" url="@../../../../../img/dog.png" />
          </image>
