--- a/src/jp/ascendia/application/fbooks/SearchPage.fxml
+++ b/src/jp/ascendia/application/fbooks/SearchPage.fxml
@@ -10,38 +10,42 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="40.0" layoutY="40.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍検索" />
+      <Label layoutX="40.0" layoutY="50.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍検索" />
+      <Label fx:id="MsgOutput" layoutX="224.0" layoutY="90.0" prefHeight="30.0" prefWidth="406.0" textFill="RED">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
       <Pane layoutX="61.0" layoutY="107.0" prefHeight="157.0" prefWidth="550.0">
          <children>
-            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="37.0" prefHeight="22.0" prefWidth="83.0" text="タイトル：">
+            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="25.0" prefHeight="22.0" prefWidth="83.0" text="タイトル：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="87.0" prefHeight="22.0" prefWidth="83.0" text="著者：">
+            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="75.0" prefHeight="22.0" prefWidth="83.0" text="著者：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="133.0" prefHeight="22.0" prefWidth="83.0" text="ジャンル：">
+            <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="123.0" prefHeight="22.0" prefWidth="83.0" text="ジャンル：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label alignment="CENTER_RIGHT" layoutX="12.0" layoutY="177.0" prefHeight="22.0" prefWidth="100.0" text="読書開始日：">
+            <Label alignment="CENTER_RIGHT" layoutX="12.0" layoutY="167.0" prefHeight="22.0" prefWidth="100.0" text="読書開始日：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="304.0" layoutY="177.0" prefHeight="22.0" prefWidth="100.0" text="読書終了日：">
+            <Label layoutX="304.0" layoutY="167.0" prefHeight="22.0" prefWidth="100.0" text="読書終了日：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <TextField fx:id="TitleField" layoutX="125.0" layoutY="34.0" prefHeight="30.0" prefWidth="450.0">
+            <TextField fx:id="TitleField" layoutX="125.0" layoutY="24.0" prefHeight="30.0" prefWidth="450.0">
                <font>
                   <Font size="14.0" />
                </font></TextField>
-            <TextField fx:id="AuthorField" layoutX="125.0" layoutY="84.0" prefHeight="30.0" prefWidth="450.0">
+            <TextField fx:id="AuthorField" layoutX="125.0" layoutY="74.0" prefHeight="30.0" prefWidth="450.0">
                <font>
                   <Font size="14.0" />
                </font></TextField>
-            <ComboBox fx:id="GenreCBox" layoutX="125.0" layoutY="134.0" prefWidth="180.0">
+            <ComboBox fx:id="GenreCBox" layoutX="125.0" layoutY="124.0" prefWidth="180.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
                      <String fx:value="文学・評論" />
@@ -67,12 +71,20 @@
                   </FXCollections>
                </items>
             </ComboBox>
-            <DatePicker fx:id="ReadStartDate" layoutX="125.0" layoutY="178.0" />
-            <DatePicker fx:id="ReadEndDate" layoutX="413.0" layoutY="178.0" />
+            <DatePicker fx:id="ReadStartDate" layoutX="125.0" layoutY="168.0" />
+            <DatePicker fx:id="ReadEndDate" layoutX="413.0" layoutY="168.0" />
          </children>
       </Pane>
-      <Button layoutX="360.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleButtonActionSearRes" text="検索" />
-      <Button layoutX="420.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleButtonAction" text="戻る" />
+      <HBox prefHeight="30.0" style="-fx-background-color: #eeeeee;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label alignment="CENTER" style="-fx-font-size: 14px; -fx-underline: true; -fx-text-fill: #1e90ff;" onMouseClicked="#homePage" prefHeight="30.0" prefWidth="70.0" text="ホーム" />
+            <Label alignment="CENTER" style="-fx-font-size: 14px; -fx-underline: true; -fx-text-fill: #1e90ff;" onMouseClicked="#AddPage" prefHeight="30.0" prefWidth="70.0" text="登録" />
+         </children>
+      </HBox>
+      <Button layoutX="370.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonActionSearRes" text="検索">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
    </children>
    <stylesheets>
      <URL value="@../css/main.css" />
