登録完了ページの修正

--- a/src/jp/ascendia/application/fbooks/EditFixPage.fxml
+++ b/src/jp/ascendia/application/fbooks/EditFixPage.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="FixField" layoutX="60.0" layoutY="38.0" prefHeight="32.0" prefWidth="354.0" styleClass="SearchRes" />
-      <Button layoutX="136.0" layoutY="108.0" mnemonicParsing="false" onAction="#SearchPagehandleButtonAction" text="検索結果一覧へ戻る" />
+      <Label fx:id="FixField" layoutX="61.0" layoutY="41.0" prefHeight="32.0" prefWidth="310.0" styleClass="SearchRes" />
+      <Button layoutX="166.0" layoutY="108.0" mnemonicParsing="false" onAction="#SearchPagehandleButtonAction" text="閉じる" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
