--- a/src/jp/ascendia/application/fbooks/AddFixPage.fxml
+++ b/src/jp/ascendia/application/fbooks/AddFixPage.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="FixField" layoutX="41.0" layoutY="38.0" prefHeight="32.0" prefWidth="261.0" styleClass="SearchRes" />
-      <Button layoutX="41.0" layoutY="108.0" mnemonicParsing="false" onAction="#handleButtonAction" text="トップページ" />
-      <Button layoutX="136.0" layoutY="108.0" mnemonicParsing="false" onAction="#AddPagehandleButtonAction" text="登録を続ける" />
+      <Label fx:id="FixField" layoutX="111.0" layoutY="41.0" prefHeight="32.0" prefWidth="261.0" styleClass="SearchRes" />
+      <Button layoutX="166.0" layoutY="108.0" mnemonicParsing="false" onAction="#AddPagehandleButtonAction" text="閉じる" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
