--- a/src/jp/ascendia/application/fbooks/EditPage.fxml
+++ b/src/jp/ascendia/application/fbooks/EditPage.fxml
@@ -40,11 +40,11 @@
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="256.0" prefHeight="22.0" prefWidth="57.0" text="メモ：">
+            <Label layoutX="283.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" text="読書終了日：">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="283.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" text="読書終了日：">
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="256.0" prefHeight="22.0" prefWidth="57.0" text="メモ：">
                <font>
                   <Font size="18.0" />
                </font></Label>
@@ -60,12 +60,6 @@
                <font>
                   <Font size="14.0" />
                </font></TextField>
-            <TextArea fx:id="MemoArea" layoutX="105.0" layoutY="257.0" prefHeight="60.0" prefWidth="450.0">
-               <font>
-                  <Font size="14.0" />
-               </font></TextArea>
-            <DatePicker fx:id="ReadStartDate" layoutX="105.0" layoutY="211.0" />
-            <DatePicker fx:id="ReadEndDate" layoutX="393.0" layoutY="211.0" />
             <ComboBox fx:id="GenreCBox" layoutX="105.0" layoutY="168.0" prefWidth="180.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
@@ -92,6 +86,12 @@
                   </FXCollections>
                </items>
             </ComboBox>
+            <DatePicker fx:id="ReadStartDate" layoutX="105.0" layoutY="211.0" />
+            <DatePicker fx:id="ReadEndDate" layoutX="393.0" layoutY="211.0" />
+            <TextArea fx:id="MemoArea" layoutX="105.0" layoutY="257.0" prefHeight="60.0" prefWidth="450.0">
+               <font>
+                  <Font size="14.0" />
+               </font></TextArea>
             <Label layoutX="105.0" layoutY="334.0" prefHeight="18.0" prefWidth="153.0" text="※は必須の入力項目です。">
                <font>
                   <Font size="14.0" />
@@ -102,7 +102,7 @@
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="395.0" layoutY="451.0" mnemonicParsing="false" onAction="#handleButtonAction" text="閉じる">
+      <Button layoutX="395.0" layoutY="451.0" mnemonicParsing="false" onAction="#handleButtonActionClose" text="閉じる">
          <font>
             <Font size="14.0" />
          </font></Button>
