--- a/src/jp/ascendia/application/fbooks/AddPage.fxml
+++ b/src/jp/ascendia/application/fbooks/AddPage.fxml
@@ -106,6 +106,6 @@
          </font></Button>
    </children>
    <stylesheets>
-      <URL value="@../css/main.css" />
+      <URL value="@../fbooks/css/Main.css" />
    </stylesheets>
 </fx:root>
