--- a/src/jp/ascendia/application/fbooks/MainPage.fxml
+++ b/src/jp/ascendia/application/fbooks/MainPage.fxml
@@ -27,16 +27,16 @@
       </Button>
       <ImageView layoutX="200.0" layoutY="130.0" fitHeight="81.0" fitWidth="81.0" preserveRatio="true">
          <image>
-            <Image preserveRatio="false" smooth="false" url="@../../../../../img/fukurou.png" />
+            <Image preserveRatio="false" smooth="false" url="@image/fukurou.png" />
          </image>
       </ImageView>
       <ImageView layoutX="200.0" layoutY="225.0" fitHeight="79.0" fitWidth="102.0" preserveRatio="true">
          <image>
-           <Image preserveRatio="false" smooth="false" url="@../../../../../img/dog.png" />
+           <Image preserveRatio="false" smooth="false" url="@image/dog.png" />
          </image>
       </ImageView>
    </children>
    <stylesheets>
-     <URL value="@../css/main.css" />
+     <URL value="@../fbooks/css/Main.css" />
    </stylesheets>
 </fx:root>
