--- a/src/jp/ascendia/application/fbooks/SearchPage.fxml
+++ b/src/jp/ascendia/application/fbooks/SearchPage.fxml
@@ -87,6 +87,6 @@
          </font></Button>
    </children>
    <stylesheets>
-     <URL value="@../css/main.css" />
+     <URL value="@../fbooks/css/Main.css" />
    </stylesheets>
 </fx:root>
