--- a/src/jp/ascendia/application/fbooks/css/Main.css
+++ b/src/jp/ascendia/application/fbooks/css/Main.css
@@ -3,7 +3,7 @@
 .root {
 /*	-fx-font-size: 18pt;
 	-fx-background-color: transparent;
-*/	-fx-background-image: url("../../../../../img/background.png");
+*/	-fx-background-image: url("../image/background.png");
 }
 
 .title {
